--- a/app/scripts/templates/start.hbs
+++ b/app/scripts/templates/start.hbs
@@ -1,2 +1,9 @@
-<div class="js-toggle">Blurry</div>
+<div class="">Blurry</div>
+<div class="">Det här är spelet där du gissar vilken kändis som gömmer sig...</div>
+
+<input type="button" class="js-toggle" value="Spela"><br>
+<input type="button" class="" disabled="disabled" value="Utmana"><br>
+<input type="button" class="" value="Highscore" disabled="disabled"><br>
+<input type="button" class="" value="Logga in" disabled="disabled">
+
 
