--- a/app/scripts/templates/start.hbs
+++ b/app/scripts/templates/start.hbs
@@ -1,4 +1,4 @@
-<div class="">Blurry</div>
+<img src="/images/logga.png">
 <div class="">Det här är spelet där du gissar vilken kändis som gömmer sig...</div>
 
 <input type="button" class="js-toggle" value="Spela"><br>
