--- a/app/scripts/templates/spela.hbs
+++ b/app/scripts/templates/spela.hbs
@@ -1,2 +1,7 @@
-<p>Spelsidan</p>
+<img src="/images/logga.png">
+<br>
+<canvas id="image" width="300px" height="300px" style="border: 1px solid"></canvas>
+<br>
+<input class="js-input" type="text" size="40">
+<input class="js-validate" type="button" value="Gissa!">
 
