Mockat jonas API-grej så länge. Slumpar ut bilder från en lista. Lagt till pushstate för att slippa #taggar i url. Lagt till beroende till OAuth i bower.json. Ni behöver köra "bower install" för att få ner biblioteket.

--- a/app/scripts/templates/spela.hbs
+++ b/app/scripts/templates/spela.hbs
@@ -2,6 +2,6 @@
 <br>
 <canvas id="image" width="300px" height="300px" style="border: 1px solid"></canvas>
 <br>
-<input class="js-input" type="text" size="40">
+<input class="js-input" type="search" size="40">
 <input class="js-validate" type="button" value="Gissa!">
 
