--- a/app/scripts/templates/spela.hbs
+++ b/app/scripts/templates/spela.hbs
@@ -1,6 +1,6 @@
 <img src="/images/logga.png">
 <br>
-<canvas id="image" width="300px" height="300px" style="border: 1px solid"></canvas>
+<canvas id="image"></canvas>
 <br>
 <input class="js-input" type="search" size="40">
 <input class="js-validate" type="button" value="Gissa!">
