--- a/app/scripts/templates/spela.hbs
+++ b/app/scripts/templates/spela.hbs
@@ -2,6 +2,12 @@
 <br>
 <canvas id="image"></canvas>
 <br>
+Vi söker förnamnet på personen bakom bilden
+<br>
 <input class="js-input" type="search" size="40">
 <input class="js-validate" type="button" value="Gissa!">
+<br>
+
+
+<div class="answer"></div>
 
