--- a/app/scripts/templates/spela.hbs
+++ b/app/scripts/templates/spela.hbs
@@ -2,12 +2,15 @@
 <br>
 <canvas id="image"></canvas>
 <br>
-Vi söker förnamnet på personen bakom bilden
-<br>
-<input class="js-input" type="search" size="40">
-<input class="js-validate" type="button" value="Gissa!">
-<br>
+
+<div id="inputContainer">
+    Vi söker förnamnet på personen bakom bilden
+    <input class="js-input" type="search" size="40">
+    <input class="js-validate" type="button" value="Gissa!">
+</div>
 
 
 <div class="answer"></div>
+<input class="js-next" type="button" value="Nästa bild">
+
 
