--- a/app/scripts/templates/spela.hbs
+++ b/app/scripts/templates/spela.hbs
@@ -1,10 +1,11 @@
 <img src="/images/logga.png">
 <br>
+<div id="points"></div>
 <canvas id="image"></canvas>
 <br>
 
 <div id="inputContainer">
-    Vi söker förnamnet på personen bakom bilden
+    Vi söker förnamnet på personen bakom bilden<br>
     <input class="js-input" type="search" size="40">
     <input class="js-validate" type="button" value="Gissa!">
 </div>
