--- a/app/scripts/templates/spela.hbs
+++ b/app/scripts/templates/spela.hbs
@@ -5,7 +5,7 @@
 
 <div id="inputContainer">
     Vi söker förnamnet på personen bakom bilden
-    <input class="js-input" type="search" size="40">
+    <input class="js-input" type="search" size="40" autofocus>
     <input class="js-validate" type="button" value="Gissa!">
 </div>
 
