Bytt namn till peekr.

--- a/app/scripts/templates/spela.hbs
+++ b/app/scripts/templates/spela.hbs
@@ -8,11 +8,11 @@
 <div id="inputContainer">
     Vi söker förnamnet på personen bakom bilden<br>
     <input class="js-input" type="search" size="40">
-    <input class="js-validate" type="button" value="Gissa!">
+    <input class="btn btn-primary btn-sm js-validate" type="button" value="Gissa!">
 </div>
 
 
 <div class="answer"></div>
-<input class="js-next" type="button" value="Nästa bild">
+<input class="btn btn-primary btn-sm js-next" type="button" value="Nästa bild">
 
 
