--- a/app/scripts/templates/start.hbs
+++ b/app/scripts/templates/start.hbs
@@ -1,9 +1,9 @@
 <img src="/images/logga.png">
-<div class="">Det här är spelet där du gissar vilken kändis som gömmer sig...</div>
-
-<input type="button" class="js-toggle" value="Spela"><br>
-<input type="button" class="" disabled="disabled" value="Utmana"><br>
-<input type="button" class="" value="Highscore" disabled="disabled"><br>
-<input type="button" class="" value="Logga in" disabled="disabled">
-
+<p>Det här är spelet där du gissar vem som gömmer sig bakom kikhålet.</p>
+<div class="container">
+    <input type="button" class="btn btn-primary btn-sm js-toggle" value="Spela"><br>
+    <input type="button" class="btn btn-default btn-sm" value="Utmana" disabled="disabled"><br>
+    <input type="button" class="btn btn-default btn-sm" value="Highscore" disabled="disabled"><br>
+    <input type="button" class="btn btn-default btn-sm" value="Logga in" disabled="disabled">
+</div>
 
