Lagt till cachning på OAuth så att man inte får upp den rutan jämt. Fixat skalningen på bilderna så nu visas dom i fullstorlek och icke förvrängda. Centrerat knapparna på förstasidan. Tömmer textrutan när man gissat fel, så att man inte måste börja med att sudda.

--- a/app/scripts/templates/spela.hbs
+++ b/app/scripts/templates/spela.hbs
@@ -1,13 +1,14 @@
-<img src="/images/logga.png">
-<br>
+<img src="/images/logga.png" alt="">
+
 <div id="points"></div>
 <div id="totalPoints"></div>
-<canvas id="image"></canvas>
-<br>
+<div class="image">
+    <canvas class="imagecanvas"/>
+</div>
 
 <div id="inputContainer">
     Vi söker förnamnet på personen bakom bilden<br>
-    <input class="js-input" type="search" size="40">
+    <input class="js-input" type="text" size="20">
     <input class="btn btn-primary btn-sm js-validate" type="button" value="Gissa!">
 </div>
 
