--- a/app/scripts/templates/start.hbs
+++ b/app/scripts/templates/start.hbs
@@ -1,9 +1,14 @@
-<img src="/images/logga.png">
-<p>Det här är spelet där du gissar vem som gömmer sig bakom kikhålet.</p>
 <div class="container">
-    <input type="button" class="btn btn-primary btn-sm js-toggle" value="Spela"><br>
-    <input type="button" class="btn btn-default btn-sm" value="Utmana" disabled="disabled"><br>
-    <input type="button" class="btn btn-default btn-sm" value="Highscore" disabled="disabled"><br>
-    <input type="button" class="btn btn-default btn-sm" value="Logga in" disabled="disabled">
+    <div class="center-block">
+        <img class="center-block" src="/images/logga.png">
+
+        <p class="text-center">Det här är spelet där du gissar vem som gömmer sig bakom kikhålet.</p>
+    </div>
+    <div class="center-block">
+        <input type="button" class="btn btn-primary form-control js-toggle" value="Spela">
+        <input type="button" class="btn btn-default form-control" value="Utmana" disabled="disabled">
+        <input type="button" class="btn btn-default form-control" value="Highscore" disabled="disabled">
+        <input type="button" class="btn btn-default form-control" value="Logga in" disabled="disabled">
+    </div>
 </div>
 
