--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,10 +4,15 @@ body {
     font-size: 12;
 }
 
-#image {
+.image {
     border: 1px solid;
     width: 300px;
     height: 300px;
+}
+
+.imagecanvas {
+    width: 100%;
+    height: 100%;
 }
 
 .answer {
